removing cross link prefixes, line wraps

--- a/docs/blockchain/oracles.mdx
+++ b/docs/blockchain/oracles.mdx
@@ -12,9 +12,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 HNT converts to Data Credits at a rate pegged to `$.00001` , and so the blockchain requires a
 canonical `HNT/$USD` price for this conversion. Beginning in June 2020, the Helium blockchain
-[started using a system](https://docs.helium.com/devblog/2020/05/29/HNT-Price-Oracles.html) of
-decentralized price oracles to supply the $USD to HNT price used for on-chain for burn transactions.
-(This system is inspired by
+[started using a system](/devblog/2020/05/29/HNT-Price-Oracles) of decentralized price oracles to
+supply the $USD to HNT price used for on-chain for burn transactions. (This system is inspired by
 [the Maker Foundation's Oracle usage.](https://blog.makerdao.com/introducing-oracles-v2-and-defi-feeds/))
 
 To find this price, nine oracles (this number may change in the future) periodically submit
@@ -77,7 +76,7 @@ The current set of public keys for the eleven HNT Price Oracles are (in no parti
 ```
 
 You can
-[list activity for a specific Oracle](https://docs.helium.com/api/blockchain/oracle-prices/#list-activity-for-a-specific-oracle)
+[list activity for a specific Oracle](/api/blockchain/oracle-prices/#list-activity-for-a-specific-oracle)
 at:
 
 ```
