--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -76,8 +76,7 @@ Hotspot owners earn IOT depending on how frequently their devices do two things:
 
 - Validate the Network - Hotspots transmit data to each other to confirm that the Network is secure
   and owners receive rewards when their Hotspot participates in a process called Proof of Coverage.
-  You can learn more about Proof of Coverage
-  [here](https://docs.helium.com/blockchain/proof-of-coverage).
+  You can learn more about Proof of Coverage [here](/blockchain/proof-of-coverage).
 - Move Data for Device Users - If an e-scooter, pet tracker, air quality sensor or other device uses
   a Hotspot to transmit data, the owner of the Hotspot receives rewards based on how much data is
   transferred.
@@ -103,5 +102,5 @@ The Helium Discord is the primary communication channel for the Helium Network C
 the primary venue to get support for using the Network. The Helium Discord is moderated by
 independent members of the Helium community.
 
-Here’s a [helpful blog about the Helium Community](https://docs.helium.com/community-governance/)
-and how you can join [the Helium Discord](https://discord.gg/helium).
+Here’s a [helpful blog about the Helium Community](/community-governance/) and how you can join
+[the Helium Discord](https://discord.gg/helium).
