--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -122,8 +122,8 @@ New makers are required to have a Maker App available before HIP 19 maker approv
 
 ### Controllino/Conelcom
 
-The [Nebra app](https://docs.helium.com/mine-hnt/maker-apps#nebra) will be used to manage
-Controllino/Conelcom hotspots in the near future. Please see the update annoucement:
+The Nebra app will be used to manage Controllino/Conelcom hotspots in the near future. Please see
+the update annoucement:
 
 https://www.nebra.com/blogs/news/nebra-ltd-providing-updates-for-controllino-conelcom-hotspots
 
@@ -273,7 +273,8 @@ FreedomFi Hotspots can now use the Helium Hotspot App to onboard and manage
 
 :::note Use Hotspotty Connect
 
-Hotspotty Connect has taken over management of the MNTD/RAK maker app. The links below are accurate for the Hotspotty Connect apps which should be used with all MNTD and RAK Wireless Hotspots.
+Hotspotty Connect has taken over management of the MNTD/RAK maker app. The links below are accurate
+for the Hotspotty Connect apps which should be used with all MNTD and RAK Wireless Hotspots.
 
 :::
 
@@ -374,8 +375,8 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 ### Pycom
 
-The [Nebra app](https://docs.helium.com/mine-hnt/maker-apps#nebra) will be used to manage Pycom
-hotspots in the near future. Please see the update annoucement:
+The Nebra app will be used to manage Pycom hotspots in the near future. Please see the update
+annoucement:
 
 https://www.nebra.com/blogs/news/nebra-providing-updates-for-pycom-hotspots
 
