--- a/docs/lorawan-on-helium/lorawan-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-on-helium.mdx
@@ -54,8 +54,8 @@ or read more [here](lorawan-on-helium/open-lns).
 Based on latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately 5800
 devices, but results still need to be replicated and bracketed. Community members are encouraged to
 run their own benchmarking tests. Instructions
-[here](https://docs.helium.com/use-the-network/run-a-network-server/router-benchmarking). Requires
-basic familiarity with Linux and Bash command-line.
+[here](/use-the-network/run-a-network-server/router-benchmarking). Requires basic familiarity with
+Linux and Bash command-line.
 
 :::
 
