--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -336,7 +336,7 @@ delete it from there to avoid any unexpected behavior.
 :::
 
 To register your end device on the console, you can follow the steps described on
-[Adding Devices](https://docs.helium.com/use-the-network/console/adding-devices/).
+[Adding Devices](/use-the-network/console/adding-devices/).
 
 ## What's next?
 
