--- a/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
@@ -32,8 +32,7 @@ that we are testing a release candidate. This testing process has many stages, b
 release passes, it will graduate to "General Availability" and be re-tagged with the `_GA` suffix.
 This triggers an automatic build of the Docker images which get pushed to Quay when complete.
 
-In addition, a "Blockchain Release" will typically be posted on
-[engineering.helium.com](https://docs.helium.com/devblog).
+In addition, a "Blockchain Release" will typically be posted on [engineering.helium.com](/devblog).
 
 As a blockchain is decentralized in its nature, we are careful not to do breaking changes that
 require immediate and synchronized updates of the Miner.
