--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -733,7 +733,7 @@ will be near the top of the list. Remember you can view the name of your validat
 ### Troubleshooting Guide
 
 If your validator does not show online in Explorer after 24 hours, view the
-[Validator Troubleshooting Guide](https://docs.helium.com/mine-hnt/validators/troubleshooting) here.
+[Validator Troubleshooting Guide](/mine-hnt/validators/troubleshooting) here.
 
 Visit the [Helium Validator Status Page](http://validators-status.helium.com) (and sign up for
 alerts, if you haven't already). This status page will provide the latest updates on important
