--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -12,8 +12,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 The following are meant to be used as guidelines for the hardware requirements when building a
 validator, more so than absolute requirements, to help minimize your
-[performance penalties](https://docs.helium.com/mine-hnt/validators/penalties/). Minimizing your
-penalties increases your chances of being elected to the Consensus Group and earning more rewards.
+[performance penalties](/mine-hnt/validators/penalties/). Minimizing your penalties increases your
+chances of being elected to the Consensus Group and earning more rewards.
 
 As the role of validator continually grows, it may require more resources over time. Once you have
 built your validator, please refer to the [Performance Baselining](#performance-baselining) section
@@ -68,9 +68,9 @@ greater than these guidelines:
     capabilities should be the target.
 
 See details for why Validators
-[SHOULD NOT BE RUN ON A HOME NETWORK](https://docs.helium.com/mine-hnt/validators/faqs-resources-providers/#technical).
-The one exception to this is if you live at an actual data center. If that's the case, you're
-allowed to run Validators at home.
+[SHOULD NOT BE RUN ON A HOME NETWORK](/mine-hnt/validators/faqs-resources-providers/#technical). The
+one exception to this is if you live at an actual data center. If that's the case, you're allowed to
+run Validators at home.
 
 ## Performance Baselining
 
@@ -104,6 +104,5 @@ allowed to run Validators at home.
   run the `fio` package to give you a full baseline of disk performance. Make sure to not be in a
   Consensus Group while benchmarking using `fio`. You can do this by running
   `miner info in_consensus`.
-- You can also refer to some steps shown at
-  [Troubleshooting](https://docs.helium.com/mine-hnt/validators/troubleshooting/) to check
-  performance.
+- You can also refer to some steps shown at [Troubleshooting](/mine-hnt/validators/troubleshooting/)
+  to check performance.
