--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -24,7 +24,7 @@ use this channel to share feedback and report issues.
 ## Confirm you are running the latest Validator version
 
 Upgrade instructions can be found
-[here](https://docs.helium.com/mine-hnt/validators/mainnet/deployment-guide/#:~:text=a%20timely%20manner.-,Upgrade%20your%20Docker%20container,-To%20do%20manual)
+[here](/mine-hnt/validators/mainnet/deployment-guide/#:~:text=a%20timely%20manner.-,Upgrade%20your%20Docker%20container,-To%20do%20manual)
 as well as the link to the latest miner tag.
 
 ## View logs
@@ -105,7 +105,7 @@ This also works for your Validator 2154 port, just swap it in for the 8080 above
   - Note: If you just loaded a snapshot or upgraded the miner version, absorb times may be higher
     than usual, so wait several hours before determining your average absorb time.
 - Consider migrating to the debian validator package from the
-  [Mainnet Deployment Guide](https://docs.helium.com/mine-hnt/validators/mainnet/deployment-guide/#:~:text=Deploy%20the%20Validator%20from%20deb%20package)
+  [Mainnet Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide/#:~:text=Deploy%20the%20Validator%20from%20deb%20package)
   to further reduce validation times.
 
 ## Validator low disk space
@@ -207,7 +207,7 @@ an advanced procedure use with caution!**
 ## Performance and DKG Penalties
 
 If you aren't yet familiar with the penalty system, check out
-[Validator Penalties and Impact on Rewards](https://docs.helium.com/mine-hnt/validators/penalties/).
+[Validator Penalties and Impact on Rewards](/mine-hnt/validators/penalties/).
 
 Low-grade Performance and DKG penalties are very noisy and difficult to troubleshoot.
 
@@ -239,7 +239,7 @@ conjunction with Grafana (and Prometheus's built-in node_exporter) for detailed 
 monitoring.
 
 Baselining your instance via command line tools is also documented here
-[Baselining Your Validator](https://docs.helium.com/mine-hnt/validators/requirements).
+[Baselining Your Validator](/mine-hnt/validators/requirements).
 
 ## Resources
 
