--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -21,7 +21,7 @@ and the blockchain. These infrastructure changes will allow the Helium Network t
 introduce new Networks as Decentralized Network Protocol (DNP) subDAOs and more easily scale
 existing DNP subDAOs by removing existing bottlenecks.
 
-With the deprecation of the Helium L1, changes to [API](https://docs.helium.com/api/) and
+With the deprecation of the Helium L1, changes to [API](/api/) and
 [ETL](https://github.com/helium/blockchain-etl) include:
 
 1. Existing ETL codebase: will no longer sync blocks.
@@ -32,9 +32,9 @@ With the deprecation of the Helium L1, changes to [API](https://docs.helium.com/
 
 What is new includes:
 
-1. New datasets are available and will continue to be available on
-   [AWS S3](https://docs.helium.com/oracles/oracle-data)
+1. New datasets are available and will continue to be available on [AWS S3](/oracles/oracle-data)
 2. Sample API code has been published
    [here](https://github.com/dewi-alliance/oracle-observer-sample).
-3. Third parties are working on new APIs and services to replace existing tools ([Hotspotty](https://hotspotty.net/api/),
+3. Third parties are working on new APIs and services to replace existing tools
+   ([Hotspotty](https://hotspotty.net/api/),
    [HeliumGeek](https://heliumgeek.com/b/helium-offchain-api.html), Relay, etc.).
