--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -12,8 +12,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Updated for Solana Mainnet
 
-The [Migration Widget](https://docs.helium.com/solana/migration/exchange#mapping-helium-wallets-to-solana-wallets) 
-and description provided below have been updated to reflect Solana Mainnet.
+The [Migration Widget](/solana/migration/exchange#mapping-helium-wallets-to-solana-wallets) and
+description provided below have been updated to reflect Solana Mainnet.
 
 :::
 
