--- a/docs/use-the-network/console/integrations/adafruitio.mdx
+++ b/docs/use-the-network/console/integrations/adafruitio.mdx
@@ -93,5 +93,4 @@ Quick video tutorial connecting devices to an integration
 :::
 
 Node elements (devices, labels, integrations) need to be created before they're available on the
-Flows Workspace. More information about Flows
-[here](https://docs.helium.com/use-the-network/console/flows/).
+Flows Workspace. More information about Flows [here](/use-the-network/console/flows/).
