--- a/docs/use-the-network/console/integrations/azure.mdx
+++ b/docs/use-the-network/console/integrations/azure.mdx
@@ -132,13 +132,12 @@ Enter the Azure IoT Central information into the Console:
 After providing a name and completing the integration, make sure the device/label is mapped to the
 Azure IoT Central Integration on the Flows page.
 
-More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+More information about Flows [here](/use-the-network/console/flows/).
 
 :::important
 
 Decoding of sensor data must occur prior to sending data to Azure IoT Central. More information on
-Decoder Functions
-[here](https://docs.helium.com/use-the-network/console/functions#creating-a-decoder-function).
+Decoder Functions [here](/use-the-network/console/functions#creating-a-decoder-function).
 
 :::
 
