--- a/docs/use-the-network/console/integrations/google-sheets.mdx
+++ b/docs/use-the-network/console/integrations/google-sheets.mdx
@@ -108,8 +108,8 @@ We can fill out the Function Body now, or save the integration and edit it later
 **Functions**. We're going to fill it out now.
 
 The data in this example is coming from a
-[Wisblock](https://docs.helium.com/use-the-network/devices/development/rakwireless/wisblock-4631/)
-with an environment sensor that's included in the
+[Wisblock](/use-the-network/devices/development/rakwireless/wisblock-4631/) with an environment
+sensor that's included in the
 [RAK Helium Devkit](https://store.rakwireless.com/collections/helium/products/helium-developer-kit).
 The Decoder function for this environment sensor is pasted into the **Function Body** section and
 passed the data from the device so it can get us the fields we need. We then map those to the google
