--- a/docs/use-the-network/console/migrating-devices/migrating-devices.mdx
+++ b/docs/use-the-network/console/migrating-devices/migrating-devices.mdx
@@ -32,8 +32,7 @@ This initial join process could take up to 20 mins depending on:
 
 After the initial join takes place future rejoining of the same device will be much quicker.
 
-More information about XOR filters
-[here](https://docs.helium.com/devblog/2021/07/29/console-updates-2.0.html).
+More information about XOR filters [here](/devblog/2021/07/29/console-updates-2.0).
 
 :::important
 
