--- a/docs/use-the-network/console/quickstart.mdx
+++ b/docs/use-the-network/console/quickstart.mdx
@@ -22,8 +22,7 @@ This Console quickstart guide will cover how to:
 :::info
 
 The cost per packet is $0.00001 USD \(24 byte packets\) which is equivalent to 1 Data Credit \(DC\).
-For more information please go
-[here](https://docs.helium.com/use-the-network/console/data-credits/).
+For more information please go [here](/use-the-network/console/data-credits/).
 
 :::
 
