--- a/docs/use-the-network/console/troubleshooting.mdx
+++ b/docs/use-the-network/console/troubleshooting.mdx
@@ -67,7 +67,7 @@ Remember after initial joining:
 
 - It takes up to (20-30 mins) for a sensor to be added for the first time due to XOR filter adding
   sensor credentials to blockchain: for more info check
-  [here](https://docs.helium.com/use-the-network/console/adding-devices/#when-adding-devices-for-the-first-time).
+  [here](/use-the-network/console/adding-devices/#when-adding-devices-for-the-first-time).
 
 <img src={useBaseUrl('img/use-the-network/console/console-troubleshooting-label-greyed.png')} />
 
@@ -88,4 +88,4 @@ backhauls used by the gateway (such as cellular).
 
 In these cases, it is recommended to explore increasing the `RX_DELAY1` value. More information
 about how to use LoRaWAN Profiles on Console to configure the `RX_DELAY1` value is available
-[here](https://docs.helium.com/use-the-network/console/profiles/#receive-window-delay).
+[here](/use-the-network/console/profiles/#receive-window-delay).
