--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -232,7 +232,7 @@ through the console. Learn more about the
 [Mappers API](/use-the-network/coverage-mapping/mappers-api).
 
 If your mapping device is delivering messages to Helium Mappers, you can also enable the
-integrations for [Cargo](https://docs.helium.com/use-the-network/console/integrations/cargo/) and
+integrations for [Cargo](/use-the-network/console/integrations/cargo/) and
 [CoverageMap.net](https://docs.ttnmapper.org/integration/helium.html) to contribute to these two
 projects using the same Decoded payload.
 
