--- a/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
@@ -27,8 +27,8 @@ Integrity Check (MIC) to disambiguate.
 Based on latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately 5800
 devices, but results still need to be replicated and bracketed. Community members are encouraged to
 run their own benchmarking tests. Instructions
-[here](https://docs.helium.com/use-the-network/run-a-network-server/router-benchmarking). Requires
-basic familiarity with Linux and Bash command-line.
+[here](/use-the-network/run-a-network-server/router-benchmarking). Requires basic familiarity with
+Linux and Bash command-line.
 
 :::
 
@@ -88,8 +88,8 @@ assigned to Devices by Router.
 ### Couple things to know before
 
 First you will need a basic understanding of the location system used by the Helium Network
-[Full Description](https://docs.helium.com/wallets/app-wallet/hexagons/). If you are aware of
-`H3 Indexes` & `Hexagons` you can skip this.
+[Full Description](/wallets/app-wallet/hexagons/). If you are aware of `H3 Indexes` & `Hexagons` you
+can skip this.
 
 Then let's talk about the offer / purchase machanism on the Helium Network.
 
@@ -161,8 +161,8 @@ At this point 2 things can happen:
       ). This is essentially a conflict with **happy path**.
    2. If Router does not deem offers associated with `Device9` worthy of purchasing (e.g. maybe
       `Device9` was de-activated by user in Console, or maybe `Device9`'s Console Organisation ran
-      out of [Data Credit](https://docs.helium.com/use-the-network/console/data-credits/)) the offer
-      will be rejected and data never delivered. This is a conflict with **non-happy path**.
+      out of [Data Credit](/use-the-network/console/data-credits/)) the offer will be rejected and
+      data never delivered. This is a conflict with **non-happy path**.
 
 The non-happy path is fairly rare as Router will do its best to find out the right device but this
 is where buying extra `DeviceAddr` can help prevent bad conflicts.
