--- a/docs/use-the-network/setup-a-packet-forwarder.mdx
+++ b/docs/use-the-network/setup-a-packet-forwarder.mdx
@@ -14,8 +14,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning
 
-The ability to earn from [Proof of Coverage](https://docs.helium.com/blockchain/proof-of-coverage)
-with anything other than an [Full Hotspot](/mine-hnt/full-hotspots) is not supported.
+The ability to earn from [Proof of Coverage](/blockchain/proof-of-coverage) with anything other than
+an [Full Hotspot](/mine-hnt/full-hotspots) is not supported.
 
 Building your own packet forwarder enables data transfer rewards _only_, **if and only if** you
 complete the setup process [here](/mine-hnt/data-only-hotspots).
