--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -117,7 +117,7 @@ Discovery Mode ignores all the rules and logic of Proof-of-Coverage, so if you h
 nearby (within 300 meters), you may see them as valid responders in Discovery Mode, but they may be
 invalid witnesses for Proof-of-Coverage purposes.
 
-[Discovery Mode also ignores the issue with Relayed Hotspots](https://docs.helium.com/troubleshooting/understanding-witnesses/#relayed-hotspot-as-a-witness).
+[Discovery Mode also ignores the issue with Relayed Hotspots](/troubleshooting/understanding-witnesses/#relayed-hotspot-as-a-witness).
 Any Hotspots that witness a beacon but is relayed, is unlikely to appear as a valid witness but may
 appear as a responder in Discovery Mode.
 
