--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -147,7 +147,7 @@ The number is a representation of how dense a hexagon is (how many Hotspots occu
 various resolutions (from resolution 12 down to resolution 4). This means that if any Hotspots
 assert themselves within the 1770 km² area surrounding your Hotspot, your Hotspot's transmit scale
 can change. If you're interested in how this is calculated, check out the
-[engineering blog](https://docs.helium.com/devblog/2020/12/09/blockchain-release-hip-17.html).
+[engineering blog](/devblog/2020/12/09/blockchain-release-hip-17).
 
 To counteract the effects of a lower transmit scale, it is recommended that Hotspots improve their
 antenna setup (outdoors, higher gain, higher elevation) so it can witness beacons of Hotspots
