--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -239,7 +239,7 @@ settings do, it is best to leave them `off` by default.
 
 ### Examine Hotspots
 
-You can now examine your hotspots by clicking the Collectables Tab. 
+You can now examine your hotspots by clicking the Collectables Tab.
 
 Let us know via Discord if you experience any issues!
 
@@ -249,11 +249,12 @@ Let us know via Discord if you experience any issues!
 
 ### Ledger Wallet
 
-Hardware ledgers are not yet compatible with the Helium Wallet App on the Solana blockchain.
-Current advice is to migrate using the tool mentioned below and switch to using [Solflare](https://solflare.com/).
+Hardware ledgers are not yet compatible with the Helium Wallet App on the Solana blockchain. Current
+advice is to migrate using the tool mentioned below and switch to using
+[Solflare](https://solflare.com/).
 
-See [Ledger wallet migration guide](/solana/migration/ledger) for guidance on how to migrate
-Ledger wallets to Solana. 
+See [Ledger wallet migration guide](/solana/migration/ledger) for guidance on how to migrate Ledger
+wallets to Solana.
 
-See [Ledger Wallet Hardware](https://docs.helium.com/wallets/ledger/) for
-how a Leger wallet was configured for HNT on the Helium Blockchain.
+See [Ledger Wallet Hardware](/wallets/ledger/) for how a Leger wallet was configured for HNT on the
+Helium Blockchain.
