--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
@@ -94,7 +94,7 @@ To select QR Onboarding, in the `hotspot.ts` file, specify `QR` in `onboardType`
 
 - [View the example in the Maker Starter app](https://github.com/helium/maker-starter-app/blob/f15a887afead44f2c0bba6ac7460cffebe02dc03/src/makers/example/hotspots.ts#L43)
 - [View the example in the Hotspot app](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41)
-- [Read more about generating QR codes](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/)
+- [Read more about generating QR codes](/wallets/app-wallet/deep-links-and-qr-codes/)
 
 ### Example QR Onboarding Flow
 
@@ -114,8 +114,7 @@ To select QR Onboarding, in the `hotspot.ts` file, specify `QR` in `onboardType`
 
 Web Onboarding allows Makers to generate a partial `add_gateway` transaction outside of the Maker
 App. Makers generate a deep link back to the Helium App/Maker App to finish the `add_gateway`
-transaction.
-[Read more about deep linking](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/).
+transaction. [Read more about deep linking](/wallets/app-wallet/deep-links-and-qr-codes/).
 
 To select Web onboarding, in the `hotspot.ts` file, specify `web` in `onboardType`.
 
@@ -224,8 +223,8 @@ Maker IDs are sequential and cannot be customized.
 
 ## Funding the Maker Account
 
-[Read the guide](https://docs.helium.com/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet)
-for more information.
+[Read the guide](/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet) for more
+information.
 
 ## Adding Hotspots to the Onboarding Server
 
