--- a/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
@@ -17,7 +17,7 @@ With HIP-19 in place, companies can submit an application to be reviewed by the 
 [Helium Foundation](https://www.helium.foundation).
 
 The full process for approving and auditing new manafacturers is as follows
-([originally outlined in this blog post](https://docs.helium.com/devblog/2021/01/26/maker-audit.html)):
+([originally outlined in this blog post](/devblog/2021/01/26/maker-audit)):
 
 1. Makers submit a HIP-19 Proposal.
 2. Helium Foundation sends KYC/B request for documentation.
