--- a/docs/solana/migration/blockchain-node.mdx
+++ b/docs/solana/migration/blockchain-node.mdx
@@ -18,8 +18,8 @@ The description provided below has been updated to reflect Solana Mainnet.
 
 ## Migrating wallet to Solana
 
-As of version [1.1.88](https://github.com/helium/blockchain-node/releases/tag/1.1.88) users can 
-migrate their `blockchain-node` wallet to a Solana Paper Compatible Wallet. Follow the below 
+As of version [1.1.88](https://github.com/helium/blockchain-node/releases/tag/1.1.88) users can
+migrate their `blockchain-node` wallet to a Solana Paper Compatible Wallet. Follow the below
 instructions to migrate your wallet on mainnet.
 
 1. Unlock wallet.
@@ -60,10 +60,11 @@ $ http -b https://migration.web.helium.io/migrate/13cQ6QUDvebHAppdmLYu9KXJvNZS9v
 ```
 
 6. Submit the transactions to Solana. You can see typescript code demonstrating how to use this
-[here](https://github.com/helium/helium-program-library/blob/master/packages/migration-service/src/test-submit.ts#L37).
+   [here](https://github.com/helium/helium-program-library/blob/master/packages/migration-service/src/test-submit.ts#L37).
 
-Alternatively, you can use the [Migration Widget](https://docs.helium.com/solana/migration/exchange#mapping-helium-wallets-to-solana-wallets)
-or [command line utility](https://github.com/helium/helium-program-library/releases/tag/v0.0.27-migration-cli)
+Alternatively, you can use the
+[Migration Widget](/solana/migration/exchange#mapping-helium-wallets-to-solana-wallets) or
+[command line utility](https://github.com/helium/helium-program-library/releases/tag/v0.0.27-migration-cli)
 for steps 5-6. Example command provided below for the command line utility:
 
 ```
