--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -71,7 +71,7 @@ Hotspot name, then under its animal name, click `No Alias` to define an Alias.
 The Coverage feature allows users to create Hotspot groups for easy management. To be added to a
 group, Hotspots must initially be followed and appear in the My Hotspots area. To add Hotspots to
 `My Hotspot` list check
-[here](https://docs.helium.com/use-the-network/console/coverage/#identify-hotspots-that-hear-devices).
+[here](/use-the-network/console/coverage/#identify-hotspots-that-hear-devices).
 
 ### Creating a Hotspot group
 
