--- a/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
+++ b/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
@@ -44,7 +44,7 @@ packaging, or unit labeling. If you did not receive these key values, you must c
 and obtain them before proceeding.
 
 Once you have these three values, follow our
-[quick start for instructions](https://docs.helium.com/use-the-network/console/quickstart).
+[quick start for instructions](/use-the-network/console/quickstart).
 
 Add a Label for your device, so that one shared configuration can be used by any additional devices
 you install.
