--- a/docs/use-the-network/run-a-network-server/debug-with-sniffer.mdx
+++ b/docs/use-the-network/run-a-network-server/debug-with-sniffer.mdx
@@ -19,8 +19,7 @@ sniffer.
    [Console](https://github.com/helium/console.git) is connected to it.
 2. The wallet to be used requires enough HNT to burn for joining the virtual device to the network.
    - It's the same fee as for a physical device.
-   - See
-     [Setup Data Only Hotspot](https://docs.helium.com/mine-hnt/data-only-hotspots/#transactions--cost)
+   - See [Setup Data Only Hotspot](/mine-hnt/data-only-hotspots/#transactions--cost)
 3. Clone each of these repos:
    - [virtual-lorawan-device](https://github.com/helium/virtual-lorawan-device)
    - [lorawan-sniffer](https://github.com/helium/lorawan-sniffer)
@@ -105,8 +104,7 @@ cd ~/helium/helium-wallet-rs/
 ```
 
 Follow its [README](https://github.com/helium/helium-wallet-rs) or other
-[instructions](https://docs.helium.com/mine-hnt/data-only-hotspots/) for creating and **funding this
-wallet**.
+[instructions](/mine-hnt/data-only-hotspots/) for creating and **funding this wallet**.
 
 View details of the _funded_ CLI wallet:
 
@@ -179,8 +177,7 @@ Confirm that the staking fee in DC is `1000000` (six zeros), and then repeat sam
 
 ## Console
 
-Log on to Console, and
-[create a new device](https://docs.helium.com/use-the-network/console/adding-devices/).
+Log on to Console, and [create a new device](/use-the-network/console/adding-devices/).
 
 When successful, Console should indicate "Pending" for this device.
 
@@ -285,8 +282,8 @@ Each start of this program begins with a fresh LoRaWAN Join, so expect to see a 
 response from the router.
 
 Consider making changes to settings within
-[configuration profiles](https://docs.helium.com/use-the-network/console/profiles/) in Console for
-this device, such as `rx_delay`.
+[configuration profiles](/use-the-network/console/profiles/) in Console for this device, such as
+`rx_delay`.
 
 ## Router Trace
 
