--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -33,14 +33,13 @@ manager processes these transactions out of order which causes some transactions
 
 Transaction fees are required on the network to prevent spamming. These fees use Data Credits (DC)
 and the Helium app uses
-[implicit burn](https://docs.helium.com/blockchain/transaction-fees/#transaction-fees-and-implicit-burn)
-to determine the appropriate amount of HNT to burn to generate these DCs.
+[implicit burn](/blockchain/transaction-fees/#transaction-fees-and-implicit-burn) to determine the
+appropriate amount of HNT to burn to generate these DCs.
 
-How much HNT to burn depends on the
-[Oracle price](https://docs.helium.com/blockchain/oracles/#hnt-price-oracles). The Oracle price is
-the median $HNT price from a list of individual oracles and used to weather large swings in price.
-In special cases, the price of $HNT may shift enough in a short time period such that the amount of
-HNT burned to generate DCs _is not enough_.
+How much HNT to burn depends on the [Oracle price](/blockchain/oracles/#hnt-price-oracles). The
+Oracle price is the median $HNT price from a list of individual oracles and used to weather large
+swings in price. In special cases, the price of $HNT may shift enough in a short time period such
+that the amount of HNT burned to generate DCs _is not enough_.
 
 :::info
 
@@ -65,8 +64,7 @@ The core developers are actively looking at ways to improve this experience.
 
 ## Transfer Hotspot Transaction Failures
 
-Please check out the
-[Transfer Hotspot Guide](https://docs.helium.com/wallets/app-wallet/transfer-hotspot/) for full
+Please check out the [Transfer Hotspot Guide](/wallets/app-wallet/transfer-hotspot/) for full
 instructions and best practices.
 
 ### Gateway Too Stale
