removing cross links

--- a/docs/blockchain/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol.mdx
@@ -62,15 +62,8 @@ achieve censorship-resistant transactions.
 
 ## The Consensus Group Election
 
-A new Consensus Group \(CG\) is elected once per epoch. Currently there are `43` members elected to
-each consensus group, as defined in the `num_consensus_members` chain variable.
-
-:::info
-
-For a more complete overview of how Validators are elected to the consensus group, see the
-[Election Process Documentation](/mine-hnt/validators/penalties/#the-election-process)
-
-:::
+A new Consensus Group is elected once per epoch. Currently there are `43` members elected to each
+consensus group, as defined in the `num_consensus_members` chain variable.
 
 ## Rewarding Hotspots
 
@@ -84,9 +77,6 @@ During the course of any epoch, Hotspots are rewarded for the following list of 
 - Successful participation in proof of coverage as a beaconer
 - Witnessing a proof of coverage beacon
 - Transferring device data over the network
-
-During the course of any epoch, Validators are rewarded for the following list of activities per
-changes from [HIP 55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md):
 
 - Serving as consensus group member
 
