--- a/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
+++ b/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
@@ -328,10 +328,9 @@ echo $P2P
 
 Choose a hexagon for each gateway instance.
 
-Because this is a test router yet each gateway's location must be asserted onto
-[mainnet](/mine-hnt/validators/#mainnet) blockchain, pick a bogus location such as middle of a lake
-or river. (While there could be legitimate _devices_ in a particular body of water, there is
-unlikely to be a hotspot there as well.)
+Because this is a test router yet each gateway's location must be asserted onto mainnet blockchain,
+pick a bogus location such as middle of a lake or river. (While there could be legitimate _devices_
+in a particular body of water, there is unlikely to be a hotspot there as well.)
 
 > The importance of asserting a location for each hotspot:
 >
