--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -84,8 +84,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <div>
         <h3>Light Hotspots</h3>
         <p style={{ marginBottom: 40 }}>
-          These Hotspots use Validators to get information about the HNT blockchain, Participate in
-          Proof of Coverage rewards, and get rewarded for forwarding Data Packets. Details{' '}
+          These Hotspots participate in Proof of Coverage rewards, and get rewarded for forwarding
+          Data Packets. Details{' '}
           <a href="https://docs.helium.com/hotspot-makers/light-hotspots">can be found here</a>.
         </p>
       </div>
@@ -94,8 +94,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <div>
         <h3>Data Only Hotspots</h3>
         <p style={{ marginBottom: 40 }}>
-          These Hotspots use Validators to get information about the HNT blockchain, and get
-          rewarded for forwarding Data Packets. Details{' '}
+          These Hotspots get rewarded for forwarding Data Packets. Details{' '}
           <a href="https://docs.helium.com/mine-hnt/data-only-hotspots">can be found here</a>.
         </p>
       </div>
