--- a/docs/oracles/iot-proof-of-coverage-oracles.mdx
+++ b/docs/oracles/iot-proof-of-coverage-oracles.mdx
@@ -10,10 +10,9 @@ slug: /oracles/iot-proof-of-coverage-oracles
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-On the Solana L1, all PoC activity is managed by Oracles, removing Validators as a potential point
-of failure and greatly simplifying the beaconing process by allowing Hotspots to self-beacon at
-regular intervals. Additionally, off-chain PoC is much more easily scalable and will remove the
-limitations on the number of Witnesses per beacon.
+On the Solana L1, all PoC activity is managed by Oracles, greatly simplifying the beaconing process
+by allowing Hotspots to self-beacon at regular intervals. Additionally, off-chain PoC is much more
+easily scalable and will remove the limitations on the number of Witnesses per beacon.
 
 The main actors and their relationships with one another are as follows.
 
