--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -203,12 +203,13 @@ chef. <span className="🥩">🥩</span>
 
 ### Delegating Stakes
 
-A stake will allow its holder to participate in Helium Network (HNT) governance, however it will not
-earn any token return until it is delegated to a subDAO.
+A stake will not earn any token return until it is delegated to a subDAO. A stake without delegation
+earns voting rights, but no token return. You can delegate an active stake within the Realms
+interface.
 
 Once a stake has been delegated, it can be undelegated in the same interface. Delegations can be
 changed at any time, however it will take one epoch for the position to be available for
-redelegation.
+redelegation. The stake must be delegated for the entire epoch to receive rewards for that epoch.
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/delegate.png')} style={{ maxHeight: 300 }} />
