Consistently capitalize 'landrush'

--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -27,7 +27,7 @@ lapsed, the landrush bonus is forfeited.
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/landrush.png')} />
   <figcaption>
-    The 'Landrush' banner indicates a position created within the first 10 days of the Solana
+    The 'landrush' banner indicates a position created within the first 10 days of the Solana
     migration.
   </figcaption>
 </figure>
@@ -222,7 +222,7 @@ A stake can be divided among multiple positions. This can be helpful if you wish
 veHNT position to multiple networks (IOT or MOBILE) or set different lockup times to different
 positions.
 
-Be warned, splitting a [Landrush](#landrush) position after the initial 10 day period will result in
+Be warned, splitting a [landrush](#landrush) position after the initial 10 day period will result in
 losing the multiplier for the tokens being split or transfered off the position.
 
 You must undelegate before spliting a stake. You can redelegate after the split is complete.
@@ -233,7 +233,7 @@ Neither staked tokens nor the NFT representing a stake can transfer from one wal
 Stakes can only be transferred from one position to another within the same wallet. Positions can
 only transfer to positions of greater or equal duration. This functionality is useful for
 consolidating positions. Landrush positions cannot be transferred into after the landrush period.
-Any veHNT transferred out of a Landrush position will lose the 3x multiplier 3x bonus.
+Any veHNT transferred out of a landrush position will lose the 3x multiplier 3x bonus.
 
 If no other compatible positions exist in an account, the "Transfer" button will be disabled for a
 position.
