--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -233,7 +233,7 @@ Neither staked tokens nor the NFT representing a stake can transfer from one wal
 Stakes can only be transferred from one position to another within the same wallet. Positions can
 only transfer to positions of greater or equal duration. This functionality is useful for
 consolidating positions. Landrush positions cannot be transferred into after the landrush period.
-Any veHNT transferred out of a landrush position will lose the 3x multiplier 3x bonus.
+Any veHNT transferred out of a landrush position will lose the 3x multiplier bonus.
 
 If no other compatible positions exist in an account, the "Transfer" button will be disabled for a
 position.
